--- a/20Entity/Hot371.Model/Hot371.Model.csproj
+++ b/20Entity/Hot371.Model/Hot371.Model.csproj
@@ -39,24 +39,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppCollection.cs" />
-    <Compile Include="AppIdleTime.cs" />
-    <Compile Include="Applicant.cs" />
-    <Compile Include="AppRecord.cs" />
-    <Compile Include="AppSubscribe.cs" />
-    <Compile Include="EApply.cs" />
-    <Compile Include="Enterprise.cs" />
-    <Compile Include="EWeiXin.cs" />
-    <Compile Include="PCheck.cs" />
-    <Compile Include="Position.cs" />
+    <Compile Include="App\AppCollection.cs" />
+    <Compile Include="App\AppDefTime.cs" />
+    <Compile Include="App\AppIdleTime.cs" />
+    <Compile Include="App\Applicant.cs" />
+    <Compile Include="App\AppRecord.cs" />
+    <Compile Include="App\AppSubscribe.cs" />
+    <Compile Include="Ent\EApply.cs" />
+    <Compile Include="Ent\Enterprise.cs" />
+    <Compile Include="Ent\EWeiXin.cs" />
+    <Compile Include="Pos\PCheck.cs" />
+    <Compile Include="Pos\Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PTimeRequirement.cs" />
-    <Compile Include="SysAdvertising.cs" />
-    <Compile Include="SysMessage.cs" />
-    <Compile Include="SysParameters.cs" />
-    <Compile Include="SysPushDetail.cs" />
-    <Compile Include="SysPushHead.cs" />
-    <Compile Include="SysUser.cs" />
+    <Compile Include="Pos\PTimeRequirement.cs" />
+    <Compile Include="Sys\SysAdvertising.cs" />
+    <Compile Include="Sys\SysArea.cs" />
+    <Compile Include="Sys\SysIFunction.cs" />
+    <Compile Include="Sys\SysIndustry.cs" />
+    <Compile Include="Sys\SysMessage.cs" />
+    <Compile Include="Sys\SysParameters.cs" />
+    <Compile Include="Sys\SysPushDetail.cs" />
+    <Compile Include="Sys\SysPushHead.cs" />
+    <Compile Include="Sys\SysUser.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
