--- a/40Bll/Hot371.Bll/Hot371.Bll.csproj
+++ b/40Bll/Hot371.Bll/Hot371.Bll.csproj
@@ -32,14 +32,36 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="TCBase.Saker.Core">
+      <HintPath>..\..\00Dll\TCBase.Saker.Core.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OperationResult.cs" />
+    <Compile Include="OperationResultType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sys\SysAreaBiz.cs" />
+    <Compile Include="Sys\SysParametersBiz.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\10Framework\QJZ.Framework.Utility\QJZ.Framework.Utility.csproj">
+      <Project>{3d866019-d27a-4c23-a0d7-7d4d3dcab2f4}</Project>
+      <Name>QJZ.Framework.Utility</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\20Entity\Hot371.Model\Hot371.Model.csproj">
+      <Project>{ad12e3b8-b49a-49e2-9fc2-bad5e708aa43}</Project>
+      <Name>Hot371.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\30Dal\Hot371.Dal\Hot371.Dal.csproj">
+      <Project>{bfbd8557-c51f-4ca8-adaf-c6d9eabce682}</Project>
+      <Name>Hot371.Dal</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
