--- a/50App/Hot371.Site.Mobile/App_Data/TCConfig/TCSmartFramework.DataAccess.config
+++ b/50App/Hot371.Site.Mobile/App_Data/TCConfig/TCSmartFramework.DataAccess.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <TCSmartFramework.DataAccess>
-  <Database name="TCMoibleActivity">
+  <Database name="Hot371">
     <read>
-      <server enabled="true" connectionString="Data Source=192.168.0.154,1438;Initial Catalog=TCMoibleActivity;User ID=TCMobile_test;Password=#%YHD$WT3Y4;Persist Security Info=True;" />
+      <server enabled="true" connectionString="Data Source=192.168.217.128;Initial Catalog=Hot371;User ID=sa;Password=1;Persist Security Info=True;" />
     </read>
     <write>
-      <server enabled="true" connectionString="Data Source=192.168.0.154,1438;Initial Catalog=TCMoibleActivity;User ID=TCMobile_test;Password=#%YHD$WT3Y4;Persist Security Info=True;" />
+      <server enabled="true" connectionString="Data Source=192.168.217.128;Initial Catalog=Hot371;User ID=sa;Password=1;Persist Security Info=True;" />
     </write>
   </Database>
 </TCSmartFramework.DataAccess>
