--- a/50App/Hot371.Site.Mobile/Hot371.Site.Mobile.csproj
+++ b/50App/Hot371.Site.Mobile/Hot371.Site.Mobile.csproj
@@ -110,8 +110,15 @@
       <Private>True</Private>
       <HintPath>..\..\packages\Microsoft.AspNet.WebPages.2.0.30506.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="TCBase.Saker.Core">
+      <HintPath>..\..\00Dll\TCBase.Saker.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="TCSmartFramework.DataAccess">
+      <HintPath>..\..\00Dll\TCSmartFramework.DataAccess.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -132,8 +139,7 @@
     <Content Include="Views\Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
+    <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -142,7 +148,23 @@
     <Content Include="App_Data\log4net.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\TCConfig\TCSmartFramework.DataAccess.config" />
+    <Content Include="App_Data\TCConfig\TCSmartFramework.DataAccess.config">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\10Framework\QJZ.Framework.Utility\QJZ.Framework.Utility.csproj">
+      <Project>{3d866019-d27a-4c23-a0d7-7d4d3dcab2f4}</Project>
+      <Name>QJZ.Framework.Utility</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\20Entity\Hot371.Model\Hot371.Model.csproj">
+      <Project>{ad12e3b8-b49a-49e2-9fc2-bad5e708aa43}</Project>
+      <Name>Hot371.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\40Bll\Hot371.Bll\Hot371.Bll.csproj">
+      <Project>{ddc0d93c-b3b3-4393-8bcc-045eca40cdab}</Project>
+      <Name>Hot371.Bll</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
