--- a/30Dal/Hot371.Dal/Hot371.Dal.csproj
+++ b/30Dal/Hot371.Dal/Hot371.Dal.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DBGlobal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sys\SysAreaRespository.cs" />
+    <Compile Include="Sys\SysIndustryRespository.cs" />
     <Compile Include="Sys\SysParametersRespository.cs" />
   </ItemGroup>
   <ItemGroup>
