--- a/40Bll/Hot371.Bll/Hot371.Bll.csproj
+++ b/40Bll/Hot371.Bll/Hot371.Bll.csproj
@@ -47,6 +47,7 @@
     <Compile Include="OperationResultType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sys\SysAreaBiz.cs" />
+    <Compile Include="Sys\SysIndustryBiz.cs" />
     <Compile Include="Sys\SysParametersBiz.cs" />
   </ItemGroup>
   <ItemGroup>
