--- a/40Bll/Hot371.Bll/Hot371.Bll.csproj
+++ b/40Bll/Hot371.Bll/Hot371.Bll.csproj
@@ -47,6 +47,7 @@
     <Compile Include="OperationResultType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sys\SysAreaBiz.cs" />
+    <Compile Include="Sys\SysIFunctionBiz.cs" />
     <Compile Include="Sys\SysIndustryBiz.cs" />
     <Compile Include="Sys\SysParametersBiz.cs" />
   </ItemGroup>
@@ -58,6 +59,10 @@
     <ProjectReference Include="..\..\20Entity\Hot371.Model\Hot371.Model.csproj">
       <Project>{ad12e3b8-b49a-49e2-9fc2-bad5e708aa43}</Project>
       <Name>Hot371.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\20Entity\Hot371.ViewModel\Hot371.ViewModel.csproj">
+      <Project>{bdff3452-6154-4f4a-9b84-e4a2b19b0ab7}</Project>
+      <Name>Hot371.ViewModel</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\30Dal\Hot371.Dal\Hot371.Dal.csproj">
       <Project>{bfbd8557-c51f-4ca8-adaf-c6d9eabce682}</Project>
